feat(hello-world): greeting class for hello world